--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,22 @@ dependencies:
   flutter_spinkit:
   country_pickers: ^1.2.0
   pin_code_fields: ^2.5.1
+  shared_preferences:
+  flutter_rave: ^0.0.5
+  image_picker: #TODO configure for iOS later
+  google_maps_flutter: ^0.5.24+1 #TODO configure for iOS later
+  firebase_database:
+  firebase_storage:
+  intent: ^1.1.0
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.4+2
+  url_launcher:
+  cached_network_image:
+  geolocator: #^5.3.0 #TODO configure the iOS version later
+  geocoder: ^0.2.1
+  provider:
+  intl:
   smooth_star_rating:
 
 dev_dependencies:
